<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/thank_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="73dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:text="@string/thank_you_for_purchasing"
            android:textSize="40sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/images"
            android:layout_below="@id/thank_msg"
            android:contentDescription="@string/todo"></ImageView>

        <Button
            android:id="@+id/home_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="68dp"
            android:duplicateParentState="true"
            android:paddingStart="5dp"
            android:backgroundTint="@color/black"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:text="@string/back_to_home" />

    </RelativeLayout>

</RelativeLayout>